Leanheat.JS.SPA.Client/wwwroot/Static/css/components.css
/*====================================== Input windows -- Ex: Register - Window ============================================ */


/*---------------Div Holder----------------------------------------*/
.form-control {
    display: block;
    width: 100%;
    height: calc(1.5em + .75rem + 2px);
    padding: .375rem .75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out
}



.form-group {
    margin-bottom: 1rem;
}

 



/*.form-text {
    display: block;
    margin-top: .25rem;
}*/



    





.colom {
   margin-top:25px;
}






/*<----------------Input Container-------------------------->*/
.inputContainer {
    left: 50%;
    transform: translateX(-50%);
    position: relative;
    margin-top: 2%;
    padding: 20px;
    min-width: 250px;
    max-width: 450px;
    width: 30%;
    background: linear-gradient(to bottom, rgba(48, 43, 59) 50%, #2a222d 80%);
    color: rgb(14, 196, 255);
    border: solid 1px rgb(64, 59, 64);
    box-shadow: 0px 0px 40px black;
    border-radius: 10px;
    font-weight: bold;
    font-family: Andale Mono, monospace;
}


 





/*<----------------Title-------------------------->*/
.title {
    position: relative;
    text-align: center;
    margin: auto;
    font-weight: 900;
    color: rgb(255, 193, 100);
    font-size: 34px;
}





/*<---------------Sub-Title-------------------------->*/

.subTitle {
    display: block;
    text-align: center;
    color: #ffe668;
    font-weight: bold;
    font-size: 20px;
}




/*<---------------Lower-Sub-Title-------------------------->*/
.lowerSubTitle {
    display: block;
    text-align: center;
}






/*<----------------Lines-------------------------->*/
.hrSub {
    border-top: 2px solid rgb(81, 81, 81);
}


.hrTitle {
    width: 100%;
    border-bottom: 2px solid rgb(255, 226, 0);
}










/*<----------------Text - Box-------------------------->*/
.textArea {
    min-height: 100px;
    background-color: rgb(255, 233, 207);
}




    .textArea:focus {
        background-color: rgb(255, 228, 153);
    }




    textArea:hover {
        background-color: aquamarine;
    }
    









/*<----------------Inputs-------------------------->*/
.inputDark {
    font-weight: 900;
    background-color: rgb(190, 254, 226);
    color: rgb(17, 74, 10);
    margin-top: 5px;
}


    .inputDark:hover {
        background-color: rgb(254, 244, 168);
        border: 2px solid rgb(0, 162, 255);
        border-radius: 5px;
    }




    .inputDark:focus {
        outline: none !important;
        background-color: rgb(165, 222, 255);
        border: 2px solid rgb(0, 162, 255);
        border-radius: 5px;
        box-shadow: 0px 0px 5px rgb(4, 176, 255);
    }









/*<----------------Button-------------------------->*/
.blue-dark-button {
    border-radius: 4px;
    /*border: 2px solid rgb(107,107,107);*/
    border: none;
    outline: none;
    width: auto;
    height: 40px;
    background: linear-gradient(to bottom, rgb(0, 162, 255) 50%, rgb(0, 162, 255) 80%);
    color: rgb(255, 255, 255);
    font-weight: bold;
    font-family: Andale Mono, monospace;
    font-size: 20px;
}



    .blue-dark-button:hover {
        background: linear-gradient(to bottom, rgb(80,86,105) 50%, #6a809c36 80%);
        color: rgb(155,255,131);
    }




    .blue-dark-button:focus {
        outline: none;
        box-shadow: 0 0 0 2pt rgb(144, 255, 122);
    }



    .blue-dark-button:active {
        background-color: deepskyblue;
        color: yellow;
        outline: none;
        box-shadow: none;
    }



















/*================== || MESSAGES ||=======================================================================================*/

.base-Message {
    top: 50px;
    padding: 10px;
    border-radius: 40px;
    text-align: center;
    justify-content: center;
    position: fixed;
    width: 200px;
    height: auto;
    max-width: 200px;
    max-height: 400px;
    opacity: 0.97;
    z-index: 100;
    font-weight: bold;
    font-family: Andale Mono, monospace;
 
}



    .base-Message p {
        background-color: rgb(0, 0, 0, 0.8);
        filter: drop-shadow(0px 0px 10px rgb(0, 0, 0));
    }


.sucsess-Message {  
    color: lime;
}



.error-Message {
    color: red;
}



/*LOADING - MSG -----------------------------------------------------------------------------------------------------------*/
.loading-Message {
    animation: loading 0.1s infinite linear;
}


@keyframes loading {
    from{
        transform: rotate(0);
    }
    to{
        transform: rotate(359deg);
    }
}











/*================== || User - HTML - Account Options etc.||=======================================================================================*/
.user-Html-Container {
    float: right;
    width: fit-content();
    height: auto;
    white-space: nowrap;
}


    .user-Html-Container a {
        margin: 0 10px 0 10px;
        font-weight: bold;
        font-family:Vrinda;
        font-size: 18px; 
    }












/*================== ||Graph ||=======================================================================================*/

.graphContainer {
    position: relative;
    max-width: 80vw;
    height: 350px;
    background: rgb(60,7,51);
    background: radial-gradient(circle, rgba(60,7,51,1) 0%, rgba(14,14,29,1) 100%);
    display:flex;
    flex-direction: column;
    justify-content:flex-end;
    
    margin: auto;
    border-radius: 4px;
    box-shadow: 0px 0px 10px rgb(0, 251, 255);
    overflow-x: auto;
    overflow-y: hidden;
    box-sizing: border-box;
}






.graphData {
    background: rgb(0,255,145);
    background: radial-gradient(circle, rgba(0,255,145,1) 23%, rgba(0,255,226,1) 100%);
    /*background-color: rgb(205, 255, 163);*/
    border: solid 2px black;
    border-top: solid 5px rgb(214, 9, 111);
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    position: relative;
    display: grid;
    width: auto;
    margin-top: auto;
    margin-left: 10px;
    margin-right: 10px;
    min-width: 70px;
    text-align: center;
    min-width: 90px;
    box-sizing: border-box;
    box-shadow: 5px -10px 8px black;
}




    .graphData:hover {
        background: rgb(118,241,194);
        background: radial-gradient(circle, rgb(205, 255, 163) 0%, rgba(202, 255, 117,1) 100%);
        border-top: 5px solid orange;
    }



.graphDataTemp {
    margin: 20px auto;
    font-weight: 900;
    color: blue;
    filter: drop-shadow(1px 1px 2px blue);
}




.graphDataTime {
    margin: auto auto 20px auto;
    color:blue;
    /*filter: drop-shadow(1px 1px 1px red);*/
    /*font-family: DotumChe;*/
    font-family: Kartika;
    font-weight: 900;
    font-size: 14px;
    /*text-shadow: 1px 1px 1px black, 1px 1px 1px black;*/
    /* box-shadow: 10px 0px 10px 20px rgba( 55, 135, 134,0.5);*/
}




       .innerGraphHolder
       {
           display:flex;
           min-width:auto;
           box-sizing: border-box;
           box-sizing: border-box;
           min-width: 1000px;
           margin-bottom: 5px;
       }




.dataInfoContainer {
    border-top: 2px solid rgb(61, 123, 255);
    background: rgb(0,0,0);
    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(31,67,112,1) 100%);
    display: table-row;
    height: 25px;
    min-width: 1100px;
    width:inherit;
    white-space: nowrap;
    box-sizing: border-box;
    /*text-align: center;*/
}




.dataInfo {
    color: rgb(255, 180, 82);
    margin-left: 20px;
    margin-right: 20px;
    font-weight: 800;   
    /*font-family:FangSong;*/
    font-family:'Noto Mono';
    font-size: 14px;
}

.dataInfo:hover
{
    background-color:black;
    border: solid 1px red;
    border-radius: 4px;
    padding: 5px;
}










/*================== || POSTS ||=======================================================================================*/
.iframeApp
{
 width: 100%;
 height: 99%;
}



 





/*================== || Mongo Graph ||=======================================================================================*/
       
.container {
    position: relative;
    overflow: hidden;
    width: 100%;
    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
}

/* Then style the iframe to fit in the container div with full height and width */
.responsive-iframe {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
}








/*================== || SEARCH ||=======================================================================================*/
/*================== || Date Picker ||=======================================================================================*/

/*-------Removes the // Before dd - day------------------------*/
input[type="date"]::-webkit-datetime-edit-text
{
    color: transparent;    
}




/*------- DatePicker ------------------------*/
input[type="date"] {
    background-color: aqua;
    border-radius: 4px;
    border: 1px solid #8c8c8c;
    font-weight: 900;
}





/*------- DatePicker - Focus ------------------------*/
input[type="date"]:focus 
{
    outline: none;
    box-shadow: 0 0 0 3px rgba(21, 156, 228, 0.4);
}






input[type="date"]::-webkit-datetime-edit, input[type="date"]::-webkit-inner-spin-button, input[type="date"]::-webkit-clear-button {
    color: #fff;
    position: relative;    
}



    /*------- Year ------------------------*/
    input[type="date"]::-webkit-datetime-edit-year-field {
        position: absolute !important;
        border-left: 1px solid #8c8c8c;
        padding: 2px;
        color: #000;
        left: 56px;
    }


    /*------- Month ------------------------*/
    input[type="date"]::-webkit-datetime-edit-month-field {
        position: absolute !important;
        border-left: 1px solid #8c8c8c;
        padding: 2px;
        color: #000;
        left: 26px;
    }



    /*------- Day ------------------------*/
    input[type="date"]::-webkit-datetime-edit-day-field {
        position: absolute !important;
        color: #000;
        padding: 2px;
        left: 4px;
    }






/*================== || SEARCH ||=======================================================================================*/


.searchContainer
{
  position: relative;
     max-width: 80vw;
    height: 350px;
    display:flex;
    flex-direction: column;
    justify-content:flex-start;
    
    margin: auto;
    border-radius: 4px;
    box-shadow: 0px 0px 10px rgb(0, 280, 255);
    overflow-x: auto;
    overflow-y: hidden;
    box-sizing: border-box;
}


.searchResultContainer {
    background-color: rgb(74, 67, 92);
    background: linear-gradient(rgb(64, 57, 82), rgb(34, 27, 52));
    border-radius: 4px;
    width: 100%;
    height: 100%;
    padding: 20px;
    color: yellow;
    font-weight: 900;
    font-family: Arial;
    border: solid 1px aqua;
}

